[package]
name = "inlist-opt"
version = "0.1.0"
authors = ["Patrick More <patrickjmore@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3"
datafusion = {path="../arrow-datafusion/datafusion"}
rand = "0.8"
arrow = { git = "https://github.com/apache/arrow-rs", rev = "508f25c10032857da34ea88cc8166f0741616a32", features = ["prettyprint"] }
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }

